Bugfix ensure no whitespaces are present in phpb-blocks-container elements

--- a/src/Modules/GrapesJS/resources/assets/sass/pagebuilder.scss
+++ b/src/Modules/GrapesJS/resources/assets/sass/pagebuilder.scss
@@ -298,6 +298,15 @@ html, body, #gjs {
   &:hover {
     color: #16b8ec !important;
   }
+
+  .block-thumb {
+    height: 70px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+    }
+  }
 }
 .gjs-blocks-c {
   background: #e1e8eb;
